--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,4 +20,4 @@ jobs:
         run: go test -v ./...
 
       - name: Update coverage report
-        uses: ncruces/go-coverage-report@v0
+        uses: 5aaee9/go-coverage-report@main
